--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Learning Git</h1>
-    <h1>This is my first GIT session</h1>
+    <p>This is my first GIT session</p>
 </body>
 </html>
