--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
     <h1>Learning Git</h1>
+    <h2></h2>
+    <ol><li>
+
+
+    </li></ol>
     <p>This is my first GIT session</p>
     <p>Adding new line</p>
-    <h2></h2>
+    <h2>Adding new line agin to check git bash</h2>
     <h3></h3>
     <ol><li></li></ol>
+    <li><li></li></li>
 </body>
 </html>
