--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Learning Git</h1>
-    <h1>Testing Git Bash</h1>
+    <h1>Testing Git Bashgit </h1>
     <h2></h2>
     <ol><li>
 
